# server/docs/swagger.json
@@ -15,10 +15,13 @@
                 "produces": [
                     "aplication/json"
                 ],
-                "summary": "авторизирует пользователя.",
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Авторизирует пользователя.",
                 "parameters": [
                     {
-                        "description": "jfjf",
+                        "description": "Параметры аунтификации",
                         "name": "request",
                         "in": "body",
                         "required": true,
